# Linucast

./: .gitignore  LICENSE  README.md  test_one_line_install.sh
cpp_core/: CMakeLists.txt
cpp_core/include/: kalman.hpp  processor.hpp
cpp_core/src/: bridge.cpp  kalman.cpp  main.cpp  processor.cpp
docs/: Architecture.md  CONTRIBUTING.md  INSTALLATION.md  MAINTENANCE.md  README.md  TRACKING.md  TROUBLESHOOTING.md  USAGE.md  VIRTUAL_CAMERA.md
install/: build_cpp.sh  install_deps.sh  install_wrapper.sh  one_line_install.sh  setup.sh  setup_v4l2loopback.sh  uninstall.sh
python_core/: config.yaml  config_novirt.yaml  linucast_simple.py  pyproject.toml  simple_camera_viewer.py  simple_gui.py
python_core/linucast/: __init__.py  __main__.py  _cpp_loader.py
python_core/linucast/ai/: __init__.py  face_detector.py  face_id.py  segmenter.py
python_core/linucast/gui/: __init__.py  main_window.py
python_core/linucast/ipc/: __init__.py  bridge.py  python_fallback.py
tools/: export_modnet.py  test_setup.py
